# wap-dev

./: .gitignore  README.md  demo.ipynb  start_server.sh
diffusion_policy/: .gitignore  pyproject.toml  requirements.txt  test.sh  train.py
diffusion_policy/diffusion_policy/common/: dp_utils.py  libero_utils.py  replay_buffer.py
diffusion_policy/diffusion_policy/config/: train_diffusion_transformer_hybrid_workspace.yaml  train_diffusion_unet_image_workspace.yaml  train_diffusion_unet_lowdim_idm_workspace.yaml  train_robomimic_image_workspace.yaml
diffusion_policy/diffusion_policy/config/task/: can_image.yaml  libero_dummy.yaml  libero_image.yaml  libero_image_atomic.yaml  libero_lowdim_idm.yaml  lift_image_abs.yaml
diffusion_policy/diffusion_policy/dataset/: libero_image_dataset.py  libero_image_segment_dataset.py  libero_lowdim_idm_dataset.py
diffusion_policy/diffusion_policy/env/libero/: libero_image_wrapper.py  libero_pose_wrapper.py
diffusion_policy/diffusion_policy/env/robomimic/: robomimic_image_wrapper.py  robomimic_pose_wrapper.py
diffusion_policy/diffusion_policy/env_runner/: libero_image_runner.py  robomimic_image_runner.py
diffusion_policy/diffusion_policy/gym_util/: async_vector_env.py  multistep_wrapper.py  sync_vector_env.py
diffusion_policy/diffusion_policy/model/vision/: lowdim_idm_obs_encoder.py  model_getter.py
diffusion_policy/diffusion_policy/policy/: diffusion_transformer_hybrid_image_policy.py  diffusion_unet_lowdim_idm_policy.py
diffusion_policy/diffusion_policy/scripts/: robomimic_dataset_conversion.py
diffusion_policy/diffusion_policy/workspace/: train_diffusion_unet_lowdim_idm_workspace.py
diffusion_policy/tests/: test_robomimic_image_runner.py
environments/LIBERO/: .gitignore  setup.py
environments/LIBERO/benchmark_scripts/: download_libero_datasets.py
environments/LIBERO/scripts/: pad_videos.py
environments/robomimic/: .gitignore  setup.py
libero_10/: agent.py  agent_utils.py  api.py  plan.py  utils.py
wm_client/: README.md  pyproject.toml
wm_client/src/wm_client/: __init__.py  client.py  wm_env.py
world_model/: .gitignore  README.md  main.py  pipeline.py  requirements.txt  server.py  setup.py
world_model/algorithms/wan/: __init__.py  wan_ai2v.py  wan_at2v.py  wan_at2v_base.py  wan_i2v.py  (+1 more)
world_model/configurations/: config.yaml
world_model/datasets/: cond_video.py  mixture.py  robosuite.py  video_base.py
world_model/experiments/: __init__.py  exp_base.py  exp_video.py
world_model/utils/: ckpt_utils.py  distributed_utils.py  huggingface_utils.py  video_utils.py  wandb_utils.py
(+51 files in other folders)
